--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "@callstack/react-theme-provider": "^2.1.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^5.1.0"
   },
   "meteor": {
     "mainModule": {
@@ -25,6 +28,7 @@
     "@types/node": "^11.13.5",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^5.1.4",
     "tslint": "^5.16.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.4.4"
