--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "@callstack/react-theme-provider": "^2.1.0",
+    "@types/jest": "^25.2.1",
     "meteor-node-stubs": "^0.4.1",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.1.0"
   },
@@ -25,12 +26,10 @@
   },
   "devDependencies": {
     "@types/meteor": "^1.4.27",
-    "@types/node": "^11.13.5",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4",
+    "@types/node": "^11.15.11",
     "@types/react-router-dom": "^5.1.4",
     "tslint": "^5.16.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.4"
+    "typescript": "^3.8.3"
   }
 }
