--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "@babel/runtime": "^7.3.4",
     "@callstack/react-theme-provider": "^2.1.0",
     "@types/jest": "^25.2.1",
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "meteor-node-stubs": "^0.4.1",
-    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
