--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.1.0"
   },
