--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "@callstack/react-theme-provider": "^2.1.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/jest": "^25.2.1",
     "bcryptjs": "^2.4.3",
     "meteor-node-stubs": "^0.4.1",
@@ -29,6 +33,7 @@
   "devDependencies": {
     "@types/meteor": "^1.4.27",
     "@types/node": "^11.15.11",
+    "@types/react-fontawesome": "^1.6.4",
     "@types/react-router-dom": "^5.1.4",
     "tslint": "^5.16.0",
     "tslint-react": "^4.0.0",
