--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/jest": "^25.2.1",
     "bcryptjs": "^2.4.3",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "tracker": "0.0.0"
   },
   "meteor": {
     "mainModule": {
